<?xml version="1.0"?>
<package format="2">
  <name>sesame_ros</name>
  <version>0.2.0</version>
  <description>ROS API for Sesame</description>

  <maintainer email="momosama1072@gmail.com">Yuto Uchimi</maintainer>
  <author email="momosama1072@gmail.com">Yuto Uchimi</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>catkin_virtualenv</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
